Fix key dot alignment again

--- a/code/odh-parking.scss
+++ b/code/odh-parking.scss
@@ -225,6 +225,7 @@
   height: 30px;
   margin: 0 0 0 17px;
   span {
+    display: inline-block;
     padding-left: 15px;
     font-size: 12px;
     height: 30px;
